<resources>
    <string name="app_name">云报销</string>
    <string name="background">背景</string>
    <string name="settings">设置</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="not_available">N/A</string>
    <string name="null_string"></string>
    <string name="empty">无</string>
    <string name="rmb">元</string>
    <string name="rmb_symbol">¥</string>
    <string name="percent">%</string>
    <string name="ten_thousand">万</string>
    <string name="one_hundred_million">亿</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="establish">新建</string>
    <string name="back">返回</string>
    <string name="complete">完成</string>
    <string name="next">下一步</string>
    <string name="send">发送</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="tip">提示</string>
    <string name="error">错误</string>
    <string name="warning">警告</string>
    <string name="option">选项</string>
    <string name="search">搜索</string>
    <string name="status">状态</string>
    <string name="detail">详情</string>
    <string name="loading">等待</string>
    <string name="image">图片</string>
    <string name="check">选中</string>
    <string name="skip">直接跳过</string>
    <string name="alarm">提醒</string>
    <string name="finish">直接结束</string>
    <string name="exit">退出</string>
    <string name="sign_in_again">重新登录</string>
    <string name="sign_up">注册</string>
    <string name="sign_up_by_phone">手机注册</string>
    <string name="sign_up_by_email">邮箱注册</string>
    <string name="have_password">已有云报销账号</string>
    <string name="sign_in">登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="find_password_by_phone">手机找回</string>
    <string name="find_password_by_email">邮箱找回</string>
    <string name="acquire_code">获取验证码</string>
    <string name="send_verify_email">发送验证邮件</string>
    <string name="reset_password">设置新密码</string>
    <string name="complete_info">完善个人信息</string>
    <string name="reimbursement">消费</string>
    <string name="report">报告</string>
    <string name="statistics">统计</string>
    <string name="me">自己</string>
    <string name="sort">排序</string>
    <string name="sort_null">无</string>
    <string name="sort_amount">金额</string>
    <string name="sort_item_count">消费笔数</string>
    <string name="sort_create_date">创建时间</string>
    <string name="sort_consumed_date">消费时间</string>
    <string name="filter">筛选</string>
    <string name="filter_all">全部</string>
    <string name="filter_prove_ahead">预申请</string>
    <string name="filter_consumed">已消费</string>
    <string name="filter_added">已加入报告</string>
    <string name="filter_free">未加入报告</string>
    <string name="filter_tag">标签</string>
    <string name="filter_category">类别</string>
    <string name="invoice">发票</string>
    <string name="reim_type">报销类型</string>
    <string name="consumed">已消费</string>
    <string name="prove_ahead">预申请</string>
    <string name="need_reimburse">需要报销</string>
    <string name="actual_cost">实际消费</string>
    <string name="budget">预算</string>
    <string name="type">类&#160;&#160;&#160;&#8201;型</string>
    <string name="photo">照&#160;&#160;&#160;&#8201;片</string>
    <string name="category">类&#160;&#160;&#160;&#8201;别</string>
    <string name="vendor">商&#160;&#160;&#160;&#8201;家</string>
    <string name="location">地&#160;&#160;&#160;&#8201;点</string>
    <string name="current_location">当前城市:</string>
    <string name="tag">标&#160;&#160;&#160;&#8201;签</string>
    <string name="member">参与者</string>
    <string name="time">日&#160;&#160;&#160;&#8201;期</string>
    <string name="note">备&#160;&#160;&#160;&#8201;注</string>
    <string name="choose_category">选择类别</string>
    <string name="choose_vendor">选择商家</string>
    <string name="choose_location">选择城市</string>
    <string name="choose_tag">选择标签</string>
    <string name="choose_member">选择参与人</string>
    <string name="choose_from_camera">拍照</string>
    <string name="choose_from_gallery">从手机相册选择</string>
    <string name="all_cities">全部城市</string>
    <string name="only_save">仅保存</string>
    <string name="send_to_approve">发送审批</string>
    <string name="report_not_available">未加入报告</string>
    <string name="vendor_not_available">未填写商家</string>
    <string name="pick_image">选择图片</string>
    <string name="no_image">未找到图片</string>
    <string name="my_report">我的</string>
    <string name="others_report">需审批</string>
    <string name="report_detail">报告详情</string>
    <string name="report_prove_ahead">预申请消费</string>
    <string name="comment">评论</string>
    <string name="add_comment">添加评论</string>
    <string name="check_comment">查看评论</string>
    <string name="sender">发送者</string>
    <string name="submit_to">提交至</string>
    <string name="cc">抄&#160;&#160;&#160;&#8201;送</string>
    <string name="total_amount">总&#160;&#160;&#160;&#8201;额</string>
    <string name="item_count">笔消费</string>
    <string name="choose_manager">选择审批人</string>
    <string name="choose_cc">选择抄送人</string>
    <string name="submit">提交</string>
    <string name="approve">同意</string>
    <string name="reject">拒绝</string>
    <string name="reject_reason">拒绝理由：</string>
    <string name="message">留言</string>
    <string name="report_over_flow">99+</string>
    <string name="export">导出</string>
    <string name="export_report">导出报告</string>
    <string name="new_item">新建消费</string>
    <string name="approve_info_hint">审批情况 ></string>
    <string name="approve_info">审批情况</string>
    <string name="approved">已通过</string>
    <string name="rejected">已退回</string>
    <string name="ready_to_approved">待审批</string>
    <string name="report_no_name">无标题报告</string>
    <string name="continue_to_choose">继续选择</string>
    <string name="choose_following_managers">选择后续审批人</string>
    <string name="mark">标记</string>
    <string name="stat_ongoing">报销中</string>
    <string name="stat_new">待提交</string>
    <string name="new_total">待报销总计</string>
    <string name="last_12_months">近12个月</string>
    <string name="cost_total">费用汇总</string>
    <string name="stat_by_category">类别统计</string>
    <string name="personal_center">个人中心</string>
    <string name="avatar">头像</string>
    <string name="enable_password_protection">开启密码保护</string>
    <string name="sync_without_wifi">仅WiFi开启时上传云端</string>
    <string name="preference">偏好设置</string>
    <string name="get_invoice">我要开发票</string>
    <string name="my_messages">我的消息</string>
    <string name="my_invites">收到的邀请</string>
    <string name="invite">邀请好友</string>
    <string name="send_invite">发送邀请</string>
    <string name="share">分享</string>
    <string name="custom_service">联系客服</string>
    <string name="personal_info">个人信息</string>
    <string name="email">邮箱</string>
    <string name="phone">手机</string>
    <string name="company">公司</string>
    <string name="nickname">昵称</string>
    <string name="change_password">修改密码</string>
    <string name="default_manager">我的上级</string>
    <string name="not_binding">未绑定</string>
    <string name="icon">图标</string>
    <string name="sub_category">子类别</string>
    <string name="join_group">加入团队</string>
    <string name="reject_invite">拒绝邀请</string>
    <string name="get_invoice_prompt">发票抬头：</string>
    <string name="invoice_invalid">还没公司，开啥发票</string>
    <string name="category_management">类别管理</string>
    <string name="edit_category">编辑类别</string>
    <string name="choose_icon">选择图标</string>
    <string name="category_limit">限额</string>
    <string name="tag_management">标签管理</string>
    <string name="edit_tag">编辑标签</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_code">+86</string>
    <string name="sign_out">退出登录</string>
    <string name="current_version">当前版本：</string>
    <string name="about_content">瞎看什么看&#8230;</string>
    <string name="share_wechat">微信分享</string>
    <string name="share_wechat_content">这是来自云报销的微信分享</string>
    <string name="share_moment">朋友圈分享</string>
    <string name="share_moment_content">这是来自云报销的朋友圈分享</string>
    <string name="share_weibo">微博分享</string>
    <string name="share_weibo_content">这是来自云报销的微博分享</string>
    <string name="share_qq">QQ分享</string>
    <string name="share_qq_content">这是来自云报销的QQ分享</string>
    <string name="input_username">请输入手机/邮箱</string>
    <string name="input_password">请输入密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_confirm_password">请确认密码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_amount">请输入金额</string>
    <string name="input_note">请输入备注</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="input_vendor">请输入商家</string>
    <string name="input_location">请输入城市</string>
    <string name="input_report_title">请输入报告名称</string>
    <string name="input_comment">请输入评论</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="input_company_name">请输入公司名称</string>
    <string name="input_feedback">请输入您的意见或建议</string>
    <string name="input_contact_info">请输入您的联系方式</string>
    <string name="input_category_name">请输入类别名称</string>
    <string name="input_category_limit">请输入类别限额</string>
    <string name="input_tag_name">请输入标签名称</string>
    <string name="input_user_contact">请输入对方手机号或邮箱</string>
    <string name="prompt_loading">正在努力加载中&#8230;</string>
    <string name="prompt_data_error">数据读取失败</string>
    <string name="prompt_sign_up_succeed">注册成功！</string>
    <string name="prompt_sign_up_succeed_with_email">注册成功！激活邮件已发送，请到邮箱中查看！</string>
    <string name="prompt_email_sent">邮件已发送，请查阅邮箱！</string>
    <string name="prompt_message_sent">验证短信已发送</string>
    <string name="prompt_password_changed">密码修改成功！</string>
    <string name="prompt_default_manager_changed">默认上级修改成功！</string>
    <string name="prompt_feedback_sent">反馈发送成功！</string>
    <string name="prompt_invite_list_failed">获取邀请列表失败</string>
    <string name="prompt_invite_reply_sent">邀请回复发送成功！</string>
    <string name="prompt_save_prove_ahead_item">这是一笔预申请的消费，您是想仅保存此笔消费还是要直接发送给上级审批？</string>
    <string name="prompt_delete_item">是否要删除此笔消费？</string>
    <string name="prompt_delete_report">是否要删除此报告？</string>
    <string name="prompt_delete_category">是否要删除此类别？</string>
    <string name="prompt_delete_tag">是否要删除此标签？</string>
    <string name="prompt_delete_succeed">删除成功</string>
    <string name="prompt_delete_failed">删除失败</string>
    <string name="prompt_press_back_to_exit">再按一次返回键退出应用</string>
    <string name="prompt_sync_ongoing">正在同步中</string>
    <string name="prompt_report_approved">报告已通过</string>
    <string name="prompt_report_rejected">报告已退回</string>
    <string name="prompt_max_image_count">啊哦，最多只能添加16张图片</string>
    <string name="prompt_feedback">告诉我们你在使用过程中遇到的问题，或对产品提出你的建议。我们会在1个工作日内给你答复。</string>
    <string name="prompt_feedback_phone">请留下联系方式，方便我们与你沟通</string>
    <string name="prompt_sender">发送者：</string>
    <string name="prompt_no_need_to_alarm">报告未在审核过程中，无需发送提醒</string>
    <string name="prompt_choose_or_finish">您是继续选择后续审批人还是直接结束这个报告？</string>
    <string name="error_wrong_code">验证码错误</string>
    <string name="error_no_code">未获取到任何验证码</string>
    <string name="error_code_empty">验证码不能为空</string>
    <string name="error_username_empty">请输入用户名</string>
    <string name="error_email_empty">请输入邮箱</string>
    <string name="error_new_email_empty">请输入新邮箱</string>
    <string name="error_email_wrong_format">邮箱格式不正确</string>
    <string name="error_phone_empty">请输入手机号</string>
    <string name="error_new_phone_empty">请输入新手机号</string>
    <string name="error_phone_wrong_format">手机号格式不正确</string>
    <string name="error_new_nickname_empty">请输入新昵称</string>
    <string name="error_new_company_name_empty">请输入公司新名称</string>
    <string name="versionControl">秦</string>
</resources>