<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:src="@drawable/filter_background"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/cancelImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="14dp"
        android:padding="16dp"
        android:contentDescription="@string/cancel"
		android:src="@drawable/cancel_drawable" />

    <ImageView
        android:id="@+id/confirmImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="14dp"
        android:padding="16dp"
        android:contentDescription="@string/confirm"
		android:src="@drawable/confirm_drawable" />

    <TextView
        android:id="@+id/sortTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/sortDivider"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="16dp"
        android:text="@string/sort"
        android:textColor="@color/hint_light_grey"
        android:textSize="14sp" />

    <include 
        android:id="@+id/sortDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="124dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        layout="@layout/view_divider"/>
    
    <classes.widget.SegmentedGroup
        android:id="@+id/sortRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_below="@+id/sortDivider"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
    	android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/sortNullRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/sort_null"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/sortItemsCountRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort_item_count"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/sortAmountRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort_amount"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/sortCreateDateRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort_create_date"
            style="@style/RadioButton" />
        
    </classes.widget.SegmentedGroup>

    <TextView
        android:id="@+id/tagTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/tagDivider"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="16dp"
        android:text="@string/filter_tag"
        android:textColor="@color/hint_light_grey"
        android:textSize="14sp" />

    <include 
        android:id="@+id/tagDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
		android:layout_alignTop="@+id/sortDivider"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        layout="@layout/view_divider"/>

    <GridView
        android:id="@+id/tagGridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tagDivider"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="4"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:verticalSpacing="22dp"
        android:horizontalSpacing="10dp" />
    
</RelativeLayout>