<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/emailBaseLayout"  >

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/emailConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailCancelButton"
        android:layout_alignBottom="@+id/emailCancelButton"
        android:layout_alignLeft="@+id/emailEditText"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/emailCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/emailEditText"
        android:layout_below="@+id/emailEditText"
        android:layout_marginTop="54dp"
        android:text="@string/cancel" />

</RelativeLayout>